--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@bitjourney/prosemirror-tables",
   "version": "1.2.3",
   "description": "ProseMirror's rowspan/colspan tables component",
-  "main": "dist/index.js",
-  "module": "dist/index.es.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
   "style": "style/tables.css",
   "typings": "./index.d.ts",
   "license": "MIT",
