--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bitjourney/prosemirror-tables",
-  "version": "1.2.3",
+  "version": "1.2.4-0",
   "description": "ProseMirror's rowspan/colspan tables component",
   "main": "dist/index.cjs",
   "module": "dist/index.js",
